@@ -13,9 +13,25 @@ for details on changes in the previous version.
 
 %Qtilities v1.1 provides the following new classes:
 
+- Qtilities::Core::HelpManager
 - Qtilities::CoreGui::GroupedConfigPage
 - Qtilities::CoreGui::Interfaces::IGroupedConfigPageInfoProvider
 - Qtilities::ProjectManagement::ProjectsBrowser
 
-- No new classes have been added yet.
+The help manager class is complimented through a Help plugin which contains a set of classes, all grouped under the Qtilities::Plugins::Help namespace.
+- Qtilities::Core::HelpManager
+
+\section whats_new_v1_1_core_highlights Highlights of changes to the Qtilities::Core module
+
+\subsection whats_new_v1_1_core_highlights_duplication Duplicating objects made easy
+
+\section whats_new_v1_1_coregui_highlights Highlights of changes to the Qtilities::CoreGui module
+
+\section whats_new_v1_1_projectmangement_highlights Highlights of changes to the Qtilities::ProjectManagement module
+
+\section whats_new_v1_1_plugins_highlights Highlights of changes to plugins
+
+\subsection whats_new_v1_1_plugins_highlights_help New Help plugin
+
+\section whats_new_v1_1_plugins_examples Highlights of changes to examples
 */
